fix map container covers the full screen of device

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,24 @@
 @charset "utf-8";
 /* CSS Document */
 
-img, embed, object, video{
+img,
+embed, 
+object,
+ video{
   max-width: 100%;
 }
 
-nav, a, button{
+nav,
+ a, 
+ button{
     width:48px;
     height:48px;
 }
 
-body,td,th,p{
+body,
+td,
+th,
+p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
@@ -21,7 +29,8 @@ body {
 	margin: 0;
 	position:relative;
 }
-ul, li {
+ul,
+ li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
@@ -30,18 +39,35 @@ a {
 	color: orange;
 	text-decoration: none;
 }
-a:hover, a:focus {
+a:hover, 
+a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
 a img{
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article, 
+aside, 
+canvas, 
+details, 
+figcaption, 
+figure, 
+footer, 
+header, 
+hgroup, 
+menu, 
+nav, 
+section {
 	display: block;
 }
 #maincontent {
@@ -64,10 +90,13 @@ nav {
   background-color: #252831;
   text-align:center;
 }
-nav h1 {
+nav 
+h1 {
   margin: auto;
 }
-nav h1 a {
+nav 
+h1 
+a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
@@ -87,25 +116,31 @@ nav h1 a {
 }
 
 /* Display list items side by side */
-.breadcrumb li {
+.breadcrumb 
+li {
     display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
-.breadcrumb li+li:before {
+.breadcrumb 
+li+li:before {
     padding: 8px;
     color: black;
     content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
-.breadcrumb li a {
+.breadcrumb 
+li 
+a {
     color: #0275d8;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
-.breadcrumb li a:hover {
+.breadcrumb 
+li 
+a:hover {
     color: #01447e;
     text-decoration: underline;
 }
@@ -113,6 +148,7 @@ nav h1 a {
 #map {
   height: 400px;
   width: 100%;
+  margin-top: 40%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
@@ -122,14 +158,16 @@ nav h1 a {
   background-color: #3397DB;
   align-items: center;
 }
-.filter-options h2 {
+.filter-options 
+h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
 }
-.filter-options select {
+.filter-options 
+select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
@@ -151,7 +189,8 @@ nav h1 a {
   padding: 30px 15px 60px;
   text-align: center;
 }
-#restaurants-list article {
+#restaurants-list 
+article {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
@@ -161,7 +200,8 @@ nav h1 a {
   text-align: left;
   width: 250px;
 }
-#restaurants-list .restaurant-img {
+#restaurants-list 
+.restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
@@ -169,7 +209,9 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
-#restaurants-list article h1 {
+#restaurants-list 
+article 
+h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 14pt;
@@ -179,11 +221,14 @@ nav h1 a {
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
-#restaurants-list p {
+#restaurants-list 
+p {
   margin: 0;
   font-size: 11pt;
 }
-#restaurants-list article a {
+#restaurants-list 
+article 
+a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
@@ -198,12 +243,14 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 
-.inside #map-container {
+.inside 
+#map-container {
   height: 100%;
 
 }
 
-.inside header {
+.inside 
+header {
   position: fixed;
   top: 0;
   width: 100%;
@@ -239,14 +286,16 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container, 
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
+  padding: 10px;
+
 }
-#reviews-container {
-  padding: 30px 40px 80px;
-}
-#reviews-container h2 {
+
+#reviews-container 
+h2 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
@@ -268,7 +317,9 @@ nav h1 a {
   position: relative;
   width: 85%;
 }
-#reviews-list li p {
+#reviews-list 
+li 
+p {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
@@ -342,41 +393,58 @@ nav h1 a {
 
 @media only screen and (max-width: 600px) {
 
-.filter-options select{
+.filter-options 
+select{
   margin: 2px;
   padding: 0 2px;
   width: 154px;
 
 }
 
-#maincontent .row {
+#maincontent 
+.row {
 
   flex-wrap: nowrap;
   flex-direction: column-reverse;
 
 }
-#maincontent .row .col-6 {
+#maincontent 
+.row 
+.col-6 {
 
   width: 100%;
 
 }
 }
 
+
+@media only screen and (max-width: 375px) {
+
+
+  #map{
+    height: 240px;
+    margin: 0;
+  }
+
+}
+
 @media only screen and (min-width: 960px) {
   
-.filter-options .col-6:nth-child(1) {
+.filter-options 
+.col-6:nth-child(1) {
   width: 25%;
 }
 
-.filter-options .col-6:nth-child(2) {
+.filter-options 
+.col-6:nth-child(2) {
   width: 75%;
 }
   
 }
 
 @media only screen and (min-width: 600px) {
- .inside #map-container {
-   background: blue none repeat scroll 0 0;
+ .inside 
+ #map-container {
    height: 87%;
    position: fixed;
    right: 0;
@@ -384,13 +452,16 @@ nav h1 a {
    width: 50%;
  }
 
- .inside #map {
+ .inside 
+ #map {
    background-color: #ccc;
    height: 100%;
    width: 100%;
+   margin-top:0;
  }
 
- .inside #footer {
+ .inside 
+ #footer {
    bottom: 0;
    position: absolute;
    width: 50%;
